# video-ai-toolkit

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
examples/: batch_process.py  colorize_video.py  denoise_video.py  enhance_pipeline.yaml  estimate_depth.py  estimate_flow.py  generate_video.py  random_pipeline.py  remove_background.py  remove_object.py  restore_faces.py  run_pipeline.py  segment_with_text.py  slow_motion.py  stabilize_video.py  stylize_video.py  upscale_video.py
scripts/: download_models.sh  install.sh  install_colorize.sh  install_denoise.sh  install_depth.sh  install_face.sh  install_flow.sh  install_generate.sh  install_inpaint.sh  install_interpolate.sh  install_matting.sh  install_segment.sh  install_stabilize.sh  install_style.sh  install_upscale.sh
tests/: __init__.py  test_toolkit.py
video_toolkit/: __init__.py  cli.py  config.py  utils.py  video_io.py
video_toolkit/colorize/: __init__.py  deoldify.py
video_toolkit/denoise/: __init__.py  fastdvdnet.py  videnn.py
video_toolkit/depth/: __init__.py  depth_v2.py  video_depth.py
video_toolkit/face/: __init__.py  codeformer.py  gfpgan.py
video_toolkit/flow/: __init__.py  raft.py  unimatch.py
video_toolkit/generate/: __init__.py  cogvideo.py  wan.py
video_toolkit/inpaint/: __init__.py  e2fgvi.py  propainter.py
video_toolkit/interpolate/: __init__.py  film.py  rife.py
video_toolkit/matting/: __init__.py  modnet.py  rvm.py
video_toolkit/pipeline/: __init__.py  adapters.py  base.py  pipeline.py  random.py  registry.py  step.py
video_toolkit/segment/: __init__.py  deva.py  grounded_sam2.py  sam2.py
video_toolkit/stabilize/: __init__.py  deepstab.py
video_toolkit/style/: __init__.py  adain.py  fast_artistic.py
video_toolkit/upscale/: __init__.py  realesrgan.py  video2x.py
